--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,9 +12,9 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "/Users/shamandutt/Desktop/TEST/U23A/embedded-project/IES_project2/.pio/build/uno/firmware.elf",
+            "executable": "C:/Users/Aj/Documents/IES_project2/.pio/build/uno/firmware.elf",
             "projectEnvName": "uno",
-            "toolchainBinDir": "/Users/shamandutt/.platformio/packages/toolchain-atmelavr/bin",
+            "toolchainBinDir": "C:/Users/Aj/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
@@ -25,18 +25,18 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/Users/shamandutt/Desktop/TEST/U23A/embedded-project/IES_project2/.pio/build/uno/firmware.elf",
+            "executable": "C:/Users/Aj/Documents/IES_project2/.pio/build/uno/firmware.elf",
             "projectEnvName": "uno",
-            "toolchainBinDir": "/Users/shamandutt/.platformio/packages/toolchain-atmelavr/bin",
+            "toolchainBinDir": "C:/Users/Aj/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "/Users/shamandutt/Desktop/TEST/U23A/embedded-project/IES_project2/.pio/build/uno/firmware.elf",
+            "executable": "C:/Users/Aj/Documents/IES_project2/.pio/build/uno/firmware.elf",
             "projectEnvName": "uno",
-            "toolchainBinDir": "/Users/shamandutt/.platformio/packages/toolchain-atmelavr/bin",
+            "toolchainBinDir": "C:/Users/Aj/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
         }
